Fixed and removed use of deprecated wrapper class constructors